--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -34,10 +34,10 @@
         <td>学习内容</td>
         <td>web网站分类，以及前端与后端的区别，岗位分为：网页构架师、网页美工、代码开发。</td>
       </tr>
-      <!--<tr>
+      <tr>
         <td>课程材料</td>
         <td> <a href="1.1web前端开发概述.pdf"> PPT课程材料</a></td>
-      </tr>-->
+      </tr>
       <tr>
         <td>我的讲解</td>
         <td>
@@ -67,8 +67,147 @@
   <!--<tr>
     <td>新单词</td>
     <td> meta（元），character（字符），charset（字符集），head（头），title（标题），body（身体），text（文本），web（网络），doc（文档），type（类型），language（语言）</a> </td>
-</tr>-->
+</tr>
 <tr>
 </table>
+</body>
+</html>
+ -->
+ <div style="text-align: center;">
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
+      <title>第一学期作品</title>
+      <style>
+        table, th, td {
+          border: 1px solid black;
+        }
+        .neirong {
+          background-color:yellow;
+        }
+        #zuiqiang{
+          background-color:red;
+        }
+      </style>
+
+      <h1> 王鑫 </h1>
+
+      <h2> 介绍 </h2>
+      第一章web概述。
+
+      <h2> 目录 </h2>
+      <ol>
+        <li> 林大 1-1web前端开发描述 </li>
+        <li> 林大 1-2,网页与网站 </li>
+        <li>林大1-3，web前端开发技术</li>
+      </ol>
+
+      <h2> 内容 </h2>
+
+      <h4> 林大 1-1,1-2,1-3， web概论 </h4>
+      <table style="width:100%">
+        <tr>
+          <th>名称</th>
+          <th>内容</th>
+        </tr>
+        <tr>
+          <td>学习内容</td>
+          <td> web的简单介绍、结构、前端和后端。</td>
+        </tr>
+        <tr>
+          <td>课程材料</td>
+          <td> <a>林大第一节课件 </a> </td>
+        </tr>
+        <tr>
+          <td>我的讲解</td>
+          <tb>应为觉得1-1和1~3没什么讲的所以只讲了1~2</tb>
+          <td>
+            <audio controls>
+              <!-- <source src="horse.ogg" type="audio/ogg"> -->
+              <source src="https://xinbaobao3775.github.io/yvyin/REC20190416224249.mp3" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>我的作品</td> 
+          <td><a>因为我觉得1-1和1-3没什么可以讲的所以就没讲</a> </td>
+        </tr>
+        <tr>
+          <td>学习时间</td>
+          <td> 3~4小时 </a> </td>
+      </tr>
+    <tr>
+      <td>新单词</td>
+      <td> web（网络）css（页面美化）</a> </td>
+  </tr>
+<ol>
+  <li> 林大 2-1 ~ 2-7的HTML基础</li>
+</ol>
+
+<h2> 内容 </h2>
+<table style="width:100%">
+  <tr>
+    <th>名称</th>
+    <th>内容</th>
+  </tr>
+  <tr>
+    <td>学习内容</td>
+    <td> HTML的基本内容</td>
+  </tr>
+  <tr>
+    <td>课程材料</td>
+    <td> <a>林大第二节课件 </a> </td>
+  </tr>
+  <tr>
+    <td>我的讲解</td>
+    <td>
+      <audio controls>
+        <!-- <source src="horse.ogg" type="audio/ogg"> -->
+        <source src="https://xinbaobao3775.github.io/yvyin/REC20190417215744.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    </td> 
+    <td>       
+      <audio controls>    
+        <source src="https://xinbaobao3775.github.io/yvyin/REC20190417220327.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    </td> 
+    <td>       
+      <audio controls>    
+        <source src="https://xinbaobao3775.github.io/yvyin/REC20190417221033.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    </td>
+  </tr>
+  <tr>
+    <td>我的作品</td> 
+  </tr>
+  <tr>
+    <td>学习时间</td>
+    <td>1～2小时 </a> </td>
+</tr>
+<tr>
+  <td>新单词</td>
+  <td><a>无</a> </td>
+</tr>
+<tr>
+</table>
+
+
+</table>
+<h2> 课程材料 </h2>
+<ol>
+  <li>  <a href="https://www.icourse163.org/learn/BJFU-1003382003?tid=1003609002#/learn/content"> 北京林业大学《Web前端开发》</a>  </li>
+</ol>
+
+<h2> 参考材料 </h2>
+<ol>
+  <li>  <a>请自行寻找 </a>  </li>
+</ol>
+
 </body>
 </html>
