--- a/306.html
+++ b/306.html
@@ -75,21 +75,17 @@
               <li></li>
             </ul>
           </td>
-          <!-- <td>
-<ul>
-<li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
-<li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
-<li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
-<li>4:</li>
-<li>5:</li>
-<li>6:</li>
-<li>7:</li>
-<li>8:</li>
-<li>9:</li>
-<li>10:</li>
-</ul>
-</td>
-</tr> -->
+           </table>
+      <table align="right">
+        <tr>
+           <td>
+             <ul>
+              <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
+              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
+              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
+             </ul>
+          </td>
+        </tr> 
       </table>
     </div>
   </body>
