--- a/309.html
+++ b/309.html
@@ -2,18 +2,16 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>link</title>
+        <title>T</title>
         <link rel="stylesheet" href="308.CSS"/>
     </head>
     <body>
     <div id="main">
       <h1 id="title">My name is LiYanQun</h1>
-      <div>The</div>
+      <div>T</div>
       <div id="img-div">
       <img id="image" src="https://i.loli.net/2018/04/13/5ad095197bd23.png">
-        <div id="img-caption">
-          没有
-        </div>
+        <div id="img-caption">还没想好致敬Who</div>
       </div>
       <div id="tribute-info">
         <h3>digetx<a id="tribute-link" href="https://2cy.cloud/ target="_blank">dimension Links</a>.</h3>
