--- a/306.html
+++ b/306.html
@@ -47,43 +47,9 @@
       border: 1px solid rgba(35, 0, 255, 0.38);
       background-color:rgba(0, 163, 255, 0.38);
     }
-/*下导航栏*/
-.zhiye {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.zhiye {
-    position: relative;
-    display: inline-block;
-}
-
-.zhi-ye {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.zhi-ye a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-.zhi-ye a:hover {background-color: #f1f1f1}
-
-.zhiye:hover .zhi-ye {
-    display: block;
-}
-
-.zhiye:hover .zhiyE {
-    background-color: #3e8e41;
+  .ziti{
+    color:black;
+    font-size:20px;
 }
   </style>
 </head>
@@ -94,17 +60,9 @@
       <p id="CSS"><a class="hub" href="https://lee-tiny-co7.github.io/xcoe17.io/307.html">诗词网站二</a></p>
     </ul>
     </div>
-<div class="zhiye">
-  <button class="zhiyE">主页</button>
-  <div class="zhi-ye">
-    <a href="https://lee-tiny-co7.github.io/xcoe17.io/306.html">作品集</a>
-    <a href="https://lee-tiny-co7.github.io/xcoe17.io/309.html">致敬</a>
-    <a href=""></a>
-  </div>
-</div>
   </body>
   <body>
-    <div>
+    <!-- <div>
       <table>
         <tr>
           <td>
@@ -113,15 +71,42 @@
               <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
               <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站一</a></li>
               <li><a class="hub" href="https://lee-tiny-co7.github.io/xcoe17.io/307.html">诗词网站二</a></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
             </ul>
           </td>
-        </table>
+        </table> -->
+        <!-- 表格 -->
+        <table style="width:100%" class="ziti">
+      <tr>
+        <th>名称</th>
+        <th>内容</th>
+      </tr>
+      <tr>
+        <td>学习内容</td>
+        <td>web网站分类，以及前端与后端的区别，岗位分为：网页构架师、网页美工、代码开发。</td>
+      </tr>
+      <tr>
+        <td>课程材料</td>
+        <td> <a href="1.1web前端开发概述.pdf"> PPT课程材料</a></td>
+      </tr>
+      <tr>
+        <td>我的讲解</td>
+        <td>
+          <audio controls>
+            <source src="web.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+        </td>
+      </tr>
+      <tr>
+        <td>课程材料</td>
+        <td> <a href="1.1web前端开发概述.pdf">PPT课程材料，可点开参考</a>
+        </td>
+      </tr>
+      <tr>
+        <td>单词</td>
+        <td></td>
+      </tr>
+</table>
     </div>
   </body>
 </html>
